changes done for toList